@startuml Vigilantt - Old
!define LIGHTORANGE
!includeurl https://raw.githubusercontent.com/Drakemor/RedDress-PlantUML/master/style.puml

'This helps fit the UML diagram on a letter/A4 page much better than the alternative,
' which tends to be too wide.
left to right direction


class AlertConfig {
  : new JSON
}
class AlertDefinition {
  : old JSON
  webhookUrl
  alertCondition
}
class AlertDefinitionAdapter {
  convertToOldDefinition()
  convertToNewDefinition
}
AlertDefinitionAdapter ..> AlertDefinition
AlertDefinitionAdapter ..> AlertConfig
FeatureConfig *-- "0..n" AlertConfig
Rollup *-- "0..n" AlertDefinition

class AlertNotification {
  EventJson event
  rollupName
  viewDimensions
}
AlertNotification --|> EventJson
AlertNotification *-- EventJson
AlertNotification --> "1" AlertDefinition

abstract class NotificationConfig
class WebhookNotificationConfig {
  webhookUrl
}
WebhookNotificationConfig --|> NotificationConfig

abstract class NotificationEvent {
  *** JSON Message Sent to Customer
  violatedRules
  event
  timestamp
}
AlertNotificationEvent --|> NotificationEvent
SimpleNotificationEvent --|> NotificationEvent


interface Notifier {
  void sendNotification()
}
class WebhookNotifier {
  OkHttpClient
}
WebhookNotifier ..|> Notifier

WebhookNotifier "1" *-- "1" WebhookNotificationConfig

class DataEngineMaintenance {
  -processAlerts()
  -void dispatchAlert(AlertNotification)
}
DataEngineMaintenance ..> AlertNotification
DataEngineMaintenance ..> AlertNotificationEvent
DataEngineMaintenance *-- WebhookNotifier: sendNotification


class ClassificationInfo {
  boolean isAnomaly
  List<String> violatedRules
}
interface EventClassifier {
  ClassificationInfo classify(Event)
}
class AnomalyDetector {
  ClassificationInfo classify(Event)
}
AnomalyDetector ..|> EventClassifier
AnomalyDetector --> ClassificationInfo

class AnomalyEventProcessor {
  EventClassifier anomalyDetector
  void processEvent(AlertNotification)
}
AnomalyEventProcessor *-- WebhookNotifier : sendNotification
AnomalyEventProcessor *-- AnomalyDetector
AnomalyEventProcessor ..> SimpleNotificationEvent
DataEngineMaintenance -right-> AnomalyEventProcessor

class AnomalyAlgorithm {
}
class AnomalyNotification {
}
AnomalyNotification *-- AlertNotification
AnomalyNotification *-- AnomalyAlgorithm


@enduml
